[tool.poetry]
name = "trello-automation"
version = "0.1.0"
description = "A python webservice to automate some actions with Trello and Slack"
authors = ["dixneuf19"]
license = "MIT"
readme = "README.md"
packages = [{include = "trello_automation"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
black = "^22.10.0"
mypy = "^0.991"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
[tool.mypy]
plugins = "pydantic.mypy"

follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
